# cpp-grpc-docker

./: .gitignore  Dockerfile  README.md
calculator/: CMakeLists.txt  client.cpp  server.cpp
calculator/cmake/: common.cmake
grpc/: install_grpc.sh
